apps/hello-service/k8s/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hello-service
spec:
  hosts:
  - "*"
  gateways:
  - istio-ingressgateway
  http:
  - route:
    - destination:
        host: hello-service
        subset: v1
      weight: 90
    - destination:
        host: hello-service
        subset: v2
      weight: 10
